unpackaged/main/default/objects/position__c/fields/cities__c.field-meta.xml
<CustomField>
    <fullName>cities__c</fullName>
    <label>cities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>state__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Jalgaon</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
            <value>
                <fullName>Ahmadnagar</fullName>
            </value>
            <value>
                <fullName>Gujarat 1</fullName>
            </value>
            <value>
                <fullName>Gujarat 2</fullName>
            </value>
            <value>
                <fullName>Rajasthan 1</fullName>
            </value>
            <value>
                <fullName>Rajasthan 2</fullName>
            </value>
            <value>
                <fullName>mp 1</fullName>
            </value>
            <value>
                <fullName>mp 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>