unpackaged/main/default/objects/position__c/fields/concactenated__c.field-meta.xml
<CustomField>
    <fullName>concactenated__c</fullName>
    <formula>Name  &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>concactenated</label>
    <type>Text</type>
</CustomField>