unpackaged/main/default/objects/position__c/fields/ending_date__c.field-meta.xml
<CustomField>
    <fullName>ending_date__c</fullName>
    <description>this date will show you thet when will it end</description>
    <label>ending date</label>
    <type>Date</type>
</CustomField>