unpackaged/main/default/objects/position__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <description>state of India</description>
    <inlineHelpText>select one of it</inlineHelpText>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>mp</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>