unpackaged/main/default/objects/position__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending approval</fullName>
                <default>true</default>
                <label>pending approval</label>
            </value>
            <value>
                <fullName>open approve</fullName>
            </value>
            <value>
                <fullName>closed filled</fullName>
            </value>
            <value>
                <fullName>closed not approve</fullName>
            </value>
            <value>
                <fullName>closed cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>