unpackaged/main/default/objects/position__c/validationRules/OrFunction.validationRule-meta.xml
<ValidationRule>
    <fullName>OrFunction</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Max_Pay__c ) &amp;&amp;  ISBLANK( Min_Pay__c )</errorConditionFormula>
    <errorMessage>you should have fill one of max or min pay</errorMessage>
</ValidationRule>